# private-bedrock-vpc

./: .env.example  .gitignore  README.md  iam_policy.json  pyproject.toml  setup_project.py  vpc_endpoint_policy.json
lambda/: bedrock.py  lambda_function.py
