[project]
name = "private-bedrock-vpc"
version = "0.1.0"
description = "Private Amazon Bedrock access via AWS PrivateLink from VPC private subnet"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"

dependencies = [
    "boto3>=1.34.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["lambda"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
